# year3_gameLAB

./: CMakeLists.txt  LICENSE  README.md
Coursework/: BGSpriteLoader.cpp  BGSpriteLoader.h  GameManager.cpp  GameManager.h  SystemRenderer.cpp  button.cpp  button.h  main.cpp  scene.h
lib_ecm/: MyEcm.cpp  MyEcm.h  ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h  MyLevelSystem.cpp  MyLevelSystem.h
practical_2_pong/: main.cpp
practical_3_spaceinvaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
practical_4_Tilemap/: main.cpp  player.cpp
practical_5_pacman/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_sprite.cpp  cmp_sprite.h  entity.cpp  entity.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.h  system_renderer.cpp
practical_6_physics/: main.cpp
res/: level1.txt  level2.txt  test_level.txt
